--- a/MedicalStaff/src/pro/artse/medicalstaff/fxml/MedicalStaffMainForm.fxml
+++ b/MedicalStaff/src/pro/artse/medicalstaff/fxml/MedicalStaffMainForm.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
@@ -14,6 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -69,7 +69,7 @@
                   <TableColumn fx:id="statusColumn" prefWidth="207.0" text="Status" />
               </columns>
             </TableView>
-            <VBox layoutX="688.0" layoutY="122.0" prefHeight="234.0" prefWidth="131.0">
+            <VBox layoutX="688.0" layoutY="122.0" prefHeight="249.0" prefWidth="131.0">
                <children>
                   <Button fx:id="locationsButton" mnemonicParsing="false" prefHeight="0.0" prefWidth="130.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Locations">
                      <VBox.margin>
@@ -86,17 +86,43 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </Button>
-                  <CheckBox fx:id="infectedCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="122.0" text="Infected">
+                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="126.0">
+                     <children>
+                        <Button fx:id="infectedButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="Button" />
+                        <Label text="Infected">
+                           <HBox.margin>
+                              <Insets left="2.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
                      <VBox.margin>
-                        <Insets bottom="5.0" />
+                        <Insets bottom="4.0" />
                      </VBox.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="potInfectedCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="123.0" text="Potentialy infected">
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="172.0" prefHeight="20.0" prefWidth="126.0">
+                     <children>
+                        <Button fx:id="potInfectedButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="Button" />
+                        <Label text="Potentially infected">
+                           <HBox.margin>
+                              <Insets left="2.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
                      <VBox.margin>
-                        <Insets bottom="5.0" />
+                        <Insets bottom="4.0" />
                      </VBox.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="notInfectedCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="115.0" text="Not infected" />
+                  </HBox>
+                  <HBox prefHeight="20.0" prefWidth="131.0">
+                     <children>
+                        <Button fx:id="notInfectedButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="Button" />
+                        <Label prefHeight="17.0" prefWidth="92.0" text="Not infected">
+                           <padding>
+                              <Insets left="2.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="126.0" />
                </children>
             </VBox>
             <TextField fx:id="searchTokenTextField" layoutX="24.0" layoutY="75.0" prefHeight="25.0" prefWidth="245.0" promptText="Search by token" />
